--- a/src/customize/components/_dropdown.scss
+++ b/src/customize/components/_dropdown.scss
@@ -1,7 +1,7 @@
 
 /* WuX-UI Components-Dropdown [Customize] */
 
-$dropdown-menu-background: #FCFCFCF;
+$dropdown-menu-background: #FCFCFC;
 $dropdown-menu-border: 2px solid #CCCCCC;
 $dropdown-menu-border-radius: 12px;
 $dropdown-menu-shadow: none;
